client/src/components/NavBar/NavBar.css
@keyframes navbar-entry {
  0% {
    opacity: 0;
    transform: translateY(-80px);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

* {
  border: 0;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: Lato, Helvetica, Arial, sans-serif;
  background: #eee;
}

a {
  color: inherit;
  font-family: inherit;
  font-size: inherit;
  text-decoration: none;
}

.mainDiv {
  margin-top: 400px;
}

.ar {
  font-family: Tahoma, sans-serif !important;
  font-weight: normal;
  font-size: 80% !important;
}

/*======================================================
                          Navbar
  ======================================================*/
.navbar {
  background: #2d2d32;
  transition-duration: 0.3s;
  color: white;
  position: fixed;
  top: 0;
  height: 80px;
  line-height: 50px;
  width: 100%;
  z-index: 999;
  opacity: 0;
  animation: navbar-entry 2s forwards;
}

.navbar-special {
  transition-duration: 0.5s;
  background: url(/dots-bg.png) left top;
  /* border-bottom: black 1px solid; */
}

.nav-wrapper {
  margin: auto;
  text-align: center;
  width: 100%;
}

.nav-wrapper-ar {
  direction: rtl;
}

/*   LOGO   */
.logo {
  float: left;
  margin-left: 20px;
  margin-top: 5px;
  font-size: 2em;
  height: 46px;
  letter-spacing: 1px;
  text-transform: uppercase;
}

.logo-ar {
  float: right;
  margin-left: none;
  margin-right: 45px;
}

@media (max-width: 823px) {
  .logo {
    margin-top: 0px;
    margin-left: 15px;
    height: 30px;
  }

  .navbar {
    height: 50px;
  }

  .logo-ar {
    margin-left: none;
    margin-right: 25px;
  }
}
/*   NAVBAR LIST   */
.navbar #menu {
  margin-top: 5px;
  float: left;
  color: white;
  list-style: none;
  margin-left: 4%;
  /* margin-top: 0.7%; */
  text-align: right;
  transition: transform 0.5s ease-out;
  -webkit-transition: transform 0.5s ease-out;
}

.navbar ul.menu-ar {
  margin-top: 5px;
  float: right;
  margin-right: 0.7%;
  direction: rtl;
}

.navbar-logos {
  margin-top: 5px;
  display: flex;
  flex-direction: row-reverse;
  padding-right: 10vw;
}

.navbar-logos li {
  margin: 0 9px;
  font-size: 1.2em;
  cursor: pointer;
}

@media (max-width: 824px) {
  .navbar ul {
    display: none;
  }
}

@media (orientation: landscape) and (min-width: 1024px) {
  .navbar ul {
    display: inline-block;
  }
}
/*   NAVBAR ITEMS   */
.navbar li {
  display: inline-block;
}

.navbar li span {
  color: white;
  display: block;
  font-size: 0.6em;
  font-weight: bold;
  height: 50px;
  letter-spacing: 1px;
  margin: 0 1.5em;
  /* margin-top: 20%; */
  /* padding: 0 7px; */
  position: relative;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.1s ease;
  -webkit-transition: all 0.1s ease;
}

.navbar-special li span {
  /* font-size: 10%; */
}
.navbar li span:hover {
  /* border-bottom: 1px solid rgb(28, 121, 184); */
  color: rgb(138, 138, 138);
  transition: all 0.1s ease;
  -webkit-transition: all 1s ease;
}

.home, .about, .projects, .contact, .services {
  border-bottom :2px solid #F9BF26;
}

/* Animated Bottom Line */
.navbar li span:before,
.navbar li span:after {
  content: "";
  position: absolute;
  width: 0%;
  height: 1.5px;
  bottom: -2px;
}

/* --------------- ANIMATION -----------------*/
.navbar li span:before {
  left: 0;
  transition: 0.3s;
}

.navbar li span:after {
  background: rgb(45, 45, 50);
  right: 0;
  /* transition: width 0.8s cubic-bezier(0.22, 0.61, 0.36, 1); */
}

.navbar li span:hover:before {
  background: #F9BF26; /*ending color*/
  width: 100%;
  transition: width 0.1s cubic-bezier((0.22, 0.61, 0.36, 1));
}

.navbar li span:hover:after {
  background: transparent;
  width: 100%;
  /* transition: 1s; */
}

.change-language {
}

.change-language {
  /* margin-left: 35vw !important; */
  font-size: 0.8em !important;
  transition: none !important;
  cursor: pointer;
}

@media(min-width: 1367px) {
  .change-language-en {
    /* margin-left: 50vw !important; */
  }
  .change-language-ar {
    /* margin-right: 50vw !important; */
  }
}

